--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist",
-     "predeploy": "npm run build"
-  
+    "predeploy": "npm run build"
   },
   "homepage": "https://tanuj-26heisnbrg.github.io/My-Portfolio/",
   "dependencies": {
@@ -18,7 +17,8 @@
     "framer-motion": "^12.23.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
