--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "homepage": "https://tanuj-26heisnbrg.github.io/My-Portfolio/",
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@splinetool/react-spline": "^4.0.0",
+    "axios": "^1.11.0",
     "framer-motion": "^12.23.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
